--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,17 +44,32 @@ textarea{
 
 .past {
     background-color: #d3d3d3;
+    background-image: linear-gradient(45deg, #FFFFFF 0%, #a7b5b9 52%, #d3d3d3 90%);
+    transition: all .5s ease-out;
+    background-size: 1px 100px;
+    background-position: 0 -10px;
     color: white;
+    border-radius: 3vh;
 }
 
 .present {
     background-color: #ff6961;
+    background-image: linear-gradient(45deg, #FFFFFF 0%, #c45656 52%, #ff6961 90%);
+    transition: all .5s ease-out;
+    background-size: 1px 100px;
+    background-position: 0 -10px;
     color: white;
+    border-radius: 3vh;
 }
 
 .future {
     background-color: #77dd77;
+    background-image: linear-gradient(45deg, #FFFFFF 0%, #2BFF88 52%, #77dd77 90%);
+    transition: all .5s ease-out;
+    background-size: 1px 100px;
+    background-position: 0 -10px;
     color: white;
+    border-radius: 3vh;
 }
 
 .saveBtn {
